@@ -767,5 +767,6 @@ Current versions are shown in the script updates notification email.
 Errors when extracting cPanel, Plesk and Ensim backup files are reported in more detail.
 Sub-domains in cPanel backups can now be properly imported.
 Virtualin plugins can now export script installers, using the scripts_list function in virtual_feature.pl.
-Added a command-line option to backup-domain.pl to backup all domains owned by some Virtualmin user.
+Added the --user command-line option to backup-domain.pl to backup all domains owned by some Virtualmin user.
 Added a checkbox to the backup form to include sub-servers of those selected too.
+Added the --user option to disable-feature.pl and enable-feature.pl to turn features off and on in all domains owned by some user.
